# goit-pythonweb-hw-10

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: constants.py  main.py
app/api/: exception_handlers.py
app/api/v1/: auth_router.py  contact_router.py  user_router.py
app/crud/: contact.py  user.py
app/db/: get_session.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  contact.py  user.py
app/schemas/: __init__.py  contact.py  user.py
app/services/: cloudinary.py  contact.py  email.py  user.py
app/utils/: __init__.py  auth.py  security.py  str_to_bool.py
app/validators/: __init__.py  phone.py
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_users_table.py  b2c3d4e5f6g7_add_user_id_to_contacts.py  c456e1c383c9_add_avatar_url_to_users.py  e24ff21cb538_initial_migration.py
templates/emails/: verify_email.html
