[project]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-orm>=1.2.10",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
